--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
 	</head>
 	<body>
     <script>
-      window.httpurl = ""
+      window.httpurl = "http://air.2024blog.asia"
     </script>
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
